# onedrive-api

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  clippy.toml  dev_shell.nix  rustfmt.toml  shell.nix
.github/workflows/: basic_test.yml  ci.yaml  future_proof.yaml  real_test.yaml  real_test.yml
onedrive-api-test/: Cargo.toml  README.md
onedrive-api-test/src/: main.rs
onedrive-api-test/tests/real_test/: main.rs  util.rs
src/: api.rs  auth.rs  authorization.rs  client.rs  error.rs  lib.rs  onedrive.rs  option.rs  query_option.rs  resource.rs  util.rs
tests/: integration_test.rs  login_setting.json.template  real_test.rs  test_ro.rs  test_rw.rs
tests/integration_test/: login_setting.rs  main.rs  test_drive_client.rs
tests/snapshots/: test_ro__get_drive-2.snap  test_ro__get_drive.snap  test_ro__get_item-2.snap  test_ro__get_item.snap  test_ro__list_children.snap
