[package]
name = "onedrive-api"
version = "0.9.0"
repository = "https://github.com/oxalica/onedrive-api"
license = "MIT"
categories = ["api-bindings"]
keywords = ["onedrive", "http", "api"]
description = "OneDrive HTTP REST API"
edition = "2018"
readme = "README.md"
documentation = "https://docs.rs/onedrive-api"

[features]
default = ["reqwest/default"]
beta = []

[dependencies]
# Compat with `reqwest`
bytes = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
url = "2"

[package.metadata.docs.rs]
all-features = true

[workspace]
members = ["onedrive-api-test"]
