[package]
name = "onedrive-api"
version = "0.10.0"
repository = "https://github.com/oxalica/onedrive-api"
categories = ["api-bindings"]
keywords = ["onedrive", "http", "api"]
description = "OneDrive HTTP REST API"
documentation = "https://docs.rs/onedrive-api"
exclude = ["/.github"]
# Cargo workspace inheritance.
# NB. Sync with CI.
rust-version = "1.64"
license.workspace = true
edition.workspace = true

[workspace]
members = ["onedrive-api-test"]

[workspace.package]
license = "MIT"
edition = "2021"

[lints]
workspace = true

[features]
default = ["reqwest/default"]
beta = []

[dependencies]
# Compat with `reqwest`
bytes = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
url = "2"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }

[package.metadata.docs.rs]
all-features = true

[workspace.lints.clippy]
pedantic = "warn"
missing-errors-doc = "allow" # Of course network requests can fail.
