[package]
name = "onedrive-api"
version = "0.10.2"
repository = "https://github.com/oxalica/onedrive-api"
categories = ["api-bindings"]
keywords = ["onedrive", "http", "api"]
description = "OneDrive HTTP REST API"
documentation = "https://docs.rs/onedrive-api"
exclude = ["/.github"]
# NB. Sync with CI.
rust-version = "1.74" # Transitive dependency windows-*
license.workspace = true
edition.workspace = true

[workspace]
members = ["onedrive-api-test"]

[workspace.package]
license = "MIT"
edition = "2021"

[lints]
workspace = true

[features]
default = ["reqwest/default"]
beta = []

[dependencies]
# Compat with `reqwest`
bytes = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "gzip", "query", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2"
url = "2"

[dev-dependencies]
reqwest = { version = "0.13", default-features = false, features = ["blocking"] }

[package.metadata.docs.rs]
all-features = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing-errors-doc = "allow" # Of course network requests can fail.
