[package]
name = "onedrive-api-test"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
onedrive-api = { path = "..", features = ["beta"] }
open = "5"
pico-args = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
envy = "0.4"
lazy_static = "1"
rand = "0.8"
reqwest = "0.11"
serde = "1"
serde_json = "1"
