[package]
name = "onedrive-api-test"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
# Keep in sync.
rust-version = "1.83"

[lints]
workspace = true

[dependencies]
anyhow = "1"
onedrive-api = { path = "..", features = ["beta"] }
open = "5"
pico-args = "0.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
envy = "0.4"
rand = "0.9"
reqwest = "0.13"
serde = "1"
serde_json = "1"
